# madbus-cli

./: Cargo.toml  README.md
src/: input.rs  main.rs
